--- a/platform/stack/adhar-appset-manifests.yaml
+++ b/platform/stack/adhar-appset-manifests.yaml
@@ -45,7 +45,9 @@ spec:
         namespace: "{{ .namespace }}"
       syncPolicy:
         syncOptions:
+          - Replace=true
           - CreateNamespace=true
+          - ServerSideApply=true
         automated:
           selfHeal: true
           prune: true
