--- a/pkg/controllers/custompackage/test/resources/customPackages/applicationSet/no-generator-single-source.yaml
+++ b/pkg/controllers/custompackage/test/resources/customPackages/applicationSet/no-generator-single-source.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: cnoe://test1
+        repoURL: adhar://test1
         targetRevision: HEAD
         path: '{{path}}'
       destination:
