--- a/platform/stack/packages/application/adhar-templates/argo-workflows/template.yaml
+++ b/platform/stack/packages/application/adhar-templates/argo-workflows/template.yaml
@@ -39,7 +39,7 @@ spec:
         defaultBranch: main
     - id: create-argocd-app
       name: Create ArgoCD App
-      action: cnoe:create-argocd-app
+      action: adhar:create-argocd-app
       input:
         appName: ${{parameters.name}}
         appNamespace: ${{parameters.name}}
