--- a/pkg/controllers/custompackage/test/resources/customPackages/applicationSet/generator-matrix.yaml
+++ b/pkg/controllers/custompackage/test/resources/customPackages/applicationSet/generator-matrix.yaml
@@ -11,7 +11,7 @@ spec:
     - matrix:
         generators:
           - git:
-              repoURL: "cnoe://test1"
+              repoURL: "adhar://test1"
               revision: HEAD
               files:
                 - path: "**/config.yaml"
@@ -23,7 +23,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: "cnoe://test1"
+        repoURL: "adhar://test1"
         targetRevision: HEAD
         path: "{{ .manifestPath }}/manifests"
       destination:
