--- a/pkg/controllers/custompackage/test/resources/customPackages/applicationSet/generator-single-source.yaml
+++ b/pkg/controllers/custompackage/test/resources/customPackages/applicationSet/generator-single-source.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   generators:
     - git:
-        repoURL: cnoe://test1
+        repoURL: adhar://test1
         revision: HEAD
         directories:
           - path: apps/*
@@ -16,7 +16,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: cnoe://test1
+        repoURL: adhar://test1
         targetRevision: HEAD
         path: '{{path}}'
       destination:
