--- a/pkg/controllers/custompackage/test/resources/customPackages/testDir/app.yaml
+++ b/pkg/controllers/custompackage/test/resources/customPackages/testDir/app.yaml
@@ -8,7 +8,7 @@ spec:
     namespace: my-app
     server: "https://kubernetes.default.svc"
   source:
-    repoURL: cnoe://app1
+    repoURL: adhar://app1
     targetRevision: HEAD
     path: "."
   project: default
