--- a/pkg/controllers/localbuild/resources/gitea/k8s/install.yaml
+++ b/pkg/controllers/localbuild/resources/gitea/k8s/install.yaml
@@ -725,7 +725,7 @@ spec:
                   number: 3000
             path: /gitea(/|$)(.*)
             pathType: ImplementationSpecific
-{{- else if ( ne .Host "adhar.localtest.me") }}
+{{ else if ( ne .Host "adhar.localtest.me") }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
