--- a/platform/stack/adhar-templates.yaml
+++ b/platform/stack/adhar-templates.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: cnoe://packages/application/adhar-templates
+    repoURL: adhar://packages/application/adhar-templates
     targetRevision: HEAD
     path: "."
     directory:
