--- a/platform/stack/packages/infrastructure/crossplane/manifests/crossplane-compositions/s3/general-purpose.yaml
+++ b/platform/stack/packages/infrastructure/crossplane/manifests/crossplane-compositions/s3/general-purpose.yaml
@@ -49,7 +49,7 @@ spec:
                     sseAlgorithm: AES256
             tagging:
               tagSet:
-                - key: cnoe
+                - key: adhar
                   value: "1"
       patches:
         - type: PatchSet
