--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,8 @@ issues:
   # don't skip warning about doc comments
   # don't exclude the default set of lint
   exclude-use-default: false
+  exclude-dirs:
+    - platform/providers
   # restore some of the defaults
   # (fill in the rest as needed)
   exclude-rules:
@@ -19,21 +21,16 @@ issues:
 linters:
   disable-all: true
   enable:
-    - dupl
     - errcheck
     - copyloopvar
     - ginkgolinter
-    - goconst
-    - gocyclo
     - gofmt
     - goimports
     - gosimple
     - govet
     - ineffassign
-    - lll
     - misspell
     - nakedret
-    - prealloc
     - revive
     - staticcheck
     - typecheck
