--- a/platform/controllers/adharplatform/resources/crossplane/install.yaml
+++ b/platform/controllers/adharplatform/resources/crossplane/install.yaml
@@ -7,13 +7,13 @@ metadata:
   namespace: adhar-system
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 ---
 # Source: crossplane/templates/serviceaccount.yaml
 apiVersion: v1
@@ -23,13 +23,13 @@ metadata:
   namespace: adhar-system
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 ---
 # Source: crossplane/templates/secret.yaml
 # The reason this is created empty and filled by the init container is we want
@@ -71,13 +71,13 @@ metadata:
   name: crossplane
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 aggregationRule:
   clusterRoleSelectors:
   - matchLabels:
@@ -90,13 +90,13 @@ metadata:
   name: crossplane:system:aggregate-to-crossplane
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
     crossplane.io/scope: "system"
     rbac.crossplane.io/aggregate-to-crossplane: "true"
 rules:
@@ -192,13 +192,13 @@ metadata:
   name: crossplane:allowed-provider-permissions
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 aggregationRule:
   clusterRoleSelectors:
   - matchLabels:
@@ -211,13 +211,13 @@ metadata:
   name: crossplane-rbac-manager
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 rules:
 - apiGroups:
   - ""
@@ -352,13 +352,13 @@ metadata:
   name: crossplane-admin
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 aggregationRule:
   clusterRoleSelectors:
   - matchLabels:
@@ -371,13 +371,13 @@ metadata:
   name: crossplane-edit
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 aggregationRule:
   clusterRoleSelectors:
   - matchLabels:
@@ -390,13 +390,13 @@ metadata:
   name: crossplane-view
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 aggregationRule:
   clusterRoleSelectors:
   - matchLabels:
@@ -409,13 +409,13 @@ metadata:
   name: crossplane-browse
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 aggregationRule:
   clusterRoleSelectors:
   - matchLabels:
@@ -429,13 +429,13 @@ metadata:
   labels:
     rbac.crossplane.io/aggregate-to-admin: "true"
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 rules:
 # Crossplane administrators have access to view events.
 - apiGroups: [""]
@@ -474,6 +474,14 @@ rules:
 - apiGroups: [apiextensions.k8s.io]
   resources: [customresourcedefinitions]
   verbs: [get, list, watch]
+- apiGroups:
+    - protection.crossplane.io
+  resources: ["*"]
+  verbs: ["*"]
+- apiGroups:
+    - ops.crossplane.io
+  resources: ["*"]
+  verbs: ["*"]
 ---
 # Source: crossplane/templates/rbac-manager-managed-clusterroles.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -483,13 +491,13 @@ metadata:
   labels:
     rbac.crossplane.io/aggregate-to-edit: "true"
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 rules:
 # Crossplane editors have access to view events.
 - apiGroups: [""]
@@ -517,6 +525,14 @@ rules:
   - secrets.crossplane.io
   resources: ["*"]
   verbs: ["*"]
+- apiGroups:
+    - protection.crossplane.io
+  resources: ["*"]
+  verbs: ["*"]
+- apiGroups:
+    - ops.crossplane.io
+  resources: ["*"]
+  verbs: ["*"]
 ---
 # Source: crossplane/templates/rbac-manager-managed-clusterroles.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -526,13 +542,13 @@ metadata:
   labels:
     rbac.crossplane.io/aggregate-to-view: "true"
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 rules:
 # Crossplane viewers have access to view events.
 - apiGroups: [""]
@@ -555,6 +571,14 @@ rules:
   - secrets.crossplane.io
   resources: ["*"]
   verbs: [get, list, watch]
+- apiGroups:
+    - protection.crossplane.io
+  resources: ["*"]
+  verbs: [get, list, watch]
+- apiGroups:
+    - ops.crossplane.io
+  resources: ["*"]
+  verbs: [get, list, watch]
 ---
 # Source: crossplane/templates/rbac-manager-managed-clusterroles.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -564,13 +588,13 @@ metadata:
   labels:
     rbac.crossplane.io/aggregate-to-browse: "true"
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 rules:
 # Crossplane browsers have access to view events.
 - apiGroups: [""]
@@ -591,13 +615,13 @@ metadata:
   name: crossplane
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -614,13 +638,13 @@ metadata:
   name: crossplane-rbac-manager
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -637,13 +661,13 @@ metadata:
   name: crossplane-admin
   labels:
     app: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -662,13 +686,13 @@ metadata:
   labels:
     app: crossplane
     release: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
   annotations:
 spec:
   selector:
@@ -688,13 +712,13 @@ metadata:
   labels:
     app: crossplane
     release: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 spec:
   replicas: 1
   selector:
@@ -708,19 +732,19 @@ spec:
       labels:
         app: crossplane
         release: crossplane        
-        helm.sh/chart: crossplane-2.0.2
+        helm.sh/chart: crossplane-2.1.3
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/component: cloud-infrastructure-controller
         app.kubernetes.io/part-of: crossplane
         app.kubernetes.io/name: crossplane
         app.kubernetes.io/instance: crossplane
-        app.kubernetes.io/version: "2.0.2"
+        app.kubernetes.io/version: "2.1.3"
     spec:
       serviceAccountName: crossplane
       hostNetwork: false
       initContainers:
         - name: crossplane-init
-          image: "xpkg.crossplane.io/crossplane/crossplane:v2.0.2"
+          image: "xpkg.crossplane.io/crossplane/crossplane:v2.1.3"
           imagePullPolicy: IfNotPresent
           args:
           - core
@@ -776,7 +800,7 @@ spec:
             value: crossplane-tls-client
       containers:
       - name: crossplane
-        image: "xpkg.crossplane.io/crossplane/crossplane:v2.0.2"
+        image: "xpkg.crossplane.io/crossplane/crossplane:v2.1.3"
         args:
         - core
         - start
@@ -868,13 +892,13 @@ metadata:
   labels:
     app: crossplane-rbac-manager
     release: crossplane    
-    helm.sh/chart: crossplane-2.0.2
+    helm.sh/chart: crossplane-2.1.3
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: cloud-infrastructure-controller
     app.kubernetes.io/part-of: crossplane
     app.kubernetes.io/name: crossplane
     app.kubernetes.io/instance: crossplane
-    app.kubernetes.io/version: "2.0.2"
+    app.kubernetes.io/version: "2.1.3"
 spec:
   replicas: 1
   selector:
@@ -888,18 +912,18 @@ spec:
       labels:
         app: crossplane-rbac-manager
         release: crossplane        
-        helm.sh/chart: crossplane-2.0.2
+        helm.sh/chart: crossplane-2.1.3
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/component: cloud-infrastructure-controller
         app.kubernetes.io/part-of: crossplane
         app.kubernetes.io/name: crossplane
         app.kubernetes.io/instance: crossplane
-        app.kubernetes.io/version: "2.0.2"
+        app.kubernetes.io/version: "2.1.3"
     spec:
       serviceAccountName: rbac-manager
       initContainers:
       - name: crossplane-init
-        image: "xpkg.crossplane.io/crossplane/crossplane:v2.0.2"
+        image: "xpkg.crossplane.io/crossplane/crossplane:v2.1.3"
         args:
         - rbac
         - init
@@ -931,7 +955,7 @@ spec:
                 divisor: "1"
       containers:
       - name: crossplane
-        image: "xpkg.crossplane.io/crossplane/crossplane:v2.0.2"
+        image: "xpkg.crossplane.io/crossplane/crossplane:v2.1.3"
         args:
         - rbac
         - start
