--- a/platform/stack/packages/observability/headlamp/manifests/install.yaml
+++ b/platform/stack/packages/observability/headlamp/manifests/install.yaml
@@ -6,11 +6,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: headlamp
+  namespace: adhar-system
   labels:
-    helm.sh/chart: headlamp-0.25.0
+    helm.sh/chart: headlamp-0.38.0
     app.kubernetes.io/name: headlamp
     app.kubernetes.io/instance: headlamp
-    app.kubernetes.io/version: "0.25.1"
+    app.kubernetes.io/version: "0.38.0"
     app.kubernetes.io/managed-by: Helm
 ---
 # Source: headlamp/templates/secret.yaml
@@ -18,12 +19,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: oidc
+  namespace: adhar-system
 type: Opaque
 data:
-  clientID: "aGVhZGxhbXA="
-  clientSecret: "e3tIRUFETEFNUF9DTElFTlRfU0VDUkVUfX0="
-  issuerURL: "aHR0cDovL2tleWNsb2FrLmtleWNsb2FrLnN2Yy5jbHVzdGVyLmxvY2FsOjgwODAva2V5Y2xvYWsvcmVhbG1zL2Nub2U="
-  scopes: "ZW1haWwscHJvZmlsZQ=="
 ---
 # Source: headlamp/templates/clusterrolebinding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -31,10 +29,10 @@ kind: ClusterRoleBinding
 metadata:
   name: headlamp-admin
   labels:
-    helm.sh/chart: headlamp-0.25.0
+    helm.sh/chart: headlamp-0.38.0
     app.kubernetes.io/name: headlamp
     app.kubernetes.io/instance: headlamp
-    app.kubernetes.io/version: "0.25.1"
+    app.kubernetes.io/version: "0.38.0"
     app.kubernetes.io/managed-by: Helm
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -50,14 +48,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: headlamp
+  namespace: adhar-system
   labels:
-    helm.sh/chart: headlamp-0.25.0
+    helm.sh/chart: headlamp-0.38.0
     app.kubernetes.io/name: headlamp
     app.kubernetes.io/instance: headlamp
-    app.kubernetes.io/version: "0.25.1"
+    app.kubernetes.io/version: "0.38.0"
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
+  
   ports:
     - port: 80
       targetPort: http
@@ -75,11 +75,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: headlamp
+  namespace: adhar-system
   labels:
-    helm.sh/chart: headlamp-0.25.0
+    helm.sh/chart: headlamp-0.38.0
     app.kubernetes.io/name: headlamp
     app.kubernetes.io/instance: headlamp
-    app.kubernetes.io/version: "0.25.1"
+    app.kubernetes.io/version: "0.38.0"
     app.kubernetes.io/managed-by: Helm
 spec:
   replicas: 1
@@ -94,6 +95,7 @@ spec:
         app.kubernetes.io/instance: headlamp
     spec:
       serviceAccountName: headlamp
+      automountServiceAccountToken: true
       securityContext:
         {}
       containers:
@@ -103,42 +105,14 @@ spec:
             runAsGroup: 101
             runAsNonRoot: true
             runAsUser: 100
-          image: "ghcr.io/headlamp-k8s/headlamp:v0.25.1"
+          image: "ghcr.io/headlamp-k8s/headlamp:v0.38.0"
           imagePullPolicy: IfNotPresent
           
           env:
-            - name: OIDC_CLIENT_ID
-              valueFrom:
-                secretKeyRef:
-                  name: oidc
-                  key: clientID
-            - name: OIDC_CLIENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: oidc
-                  key: clientSecret
-            - name: OIDC_ISSUER_URL
-              valueFrom:
-                secretKeyRef:
-                  name: oidc
-                  key: issuerURL
-            - name: OIDC_SCOPES
-              valueFrom:
-                secretKeyRef:
-                  name: oidc
-                  key: scopes
           args:
             - "-in-cluster"
             - "-plugins-dir=/headlamp/plugins"
             # Check if externalSecret is disabled
-            # Check if clientID is non empty either from env or oidc.config
-            - "-oidc-client-id=$(OIDC_CLIENT_ID)"
-            # Check if clientSecret is non empty either from env or oidc.config
-            - "-oidc-client-secret=$(OIDC_CLIENT_SECRET)"
-            # Check if issuerURL is non empty either from env or oidc.config
-            - "-oidc-idp-issuer-url=$(OIDC_ISSUER_URL)"
-            # Check if scopes are non empty either from env or oidc.config
-            - "-oidc-scopes=$(OIDC_SCOPES)"
           ports:
             - name: http
               containerPort: 4466
